--- a/shopping-cart/src/main/resources/application.properties
+++ b/shopping-cart/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 spring.datasource.url=jdbc:mysql://localhost/shoppashppingcart
 spring.datasource.username=root
 spring.datasource.password=1234
+spring.servlet.multipart.max-file-size = -1
+spring.servlet.multipart.max-request-size = -1
